--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.3",
+    "mongodb": "^4.1.0",
     "mongoose": "^5.1.4",
-    "morgan": "^1.9.0"
+    "morgan": "^1.9.0",
+    "mysql": "^2.18.1"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
